deterministic generator tests, fixed flaky test

--- a/test/output/mermaid_sync_async.html
+++ b/test/output/mermaid_sync_async.html
@@ -68,6 +68,9 @@ sequenceDiagram
     requester->>responder: :get_data
     deactivate responder
     notifier-->>listener: :notify
+    activate responder
+    requester->>responder: :get_data
+    deactivate responder
     </div>
   </div>
 
@@ -81,7 +84,10 @@ sequenceDiagram
     activate responder
     requester->>responder: :get_data
     deactivate responder
-    notifier-->>listener: :notify</pre>
+    notifier-->>listener: :notify
+    activate responder
+    requester->>responder: :get_data
+    deactivate responder</pre>
   </div>
 
   <script>
